force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>All Construction related expenses are lodged here.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Expense No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>