force-app/main/default/objects/Expense__c/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracts</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>