force-app/main/default/objects/Expense__c/fields/Date_of_Expense__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expense__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date of Expense</label>
    <type>Date</type>
</CustomField>