force-app/main/default/objects/Expense__c/fields/Is_It_Wast__c.field-meta.xml
<CustomField>
    <fullName>Is_It_Wast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is It Wast</label>
    <type>Checkbox</type>
</CustomField>