force-app/main/default/objects/Expense__c/fields/Receipt_Available__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Available</label>
    <type>Checkbox</type>
</CustomField>