force-app/main/default/objects/Expense__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Steel</fullName>
            </value>
            <value>
                <fullName>Bricks</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Paints</fullName>
            </value>
            <value>
                <fullName>Wood work</fullName>
            </value>
            <value>
                <fullName>Pop</fullName>
            </value>
            <value>
                <fullName>Marbles</fullName>
            </value>
            <value>
                <fullName>Tiles</fullName>
            </value>
            <value>
                <fullName>Step railing</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Tapi</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Sweeping</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
            <value>
                <fullName>Iron</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Matti Pani</fullName>
            </value>
            <value>
                <fullName>Centering</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>