force-app/main/default/objects/Expense__c/validationRules/Project_Name_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Name_validation</fullName>
    <active>true</active>
    <description>It will check expense Project and Contract project names,</description>
    <errorConditionFormula>Project__r.Name  &lt;&gt;  Contracts__r.Project__r.Name</errorConditionFormula>
    <errorDisplayField>Project__c</errorDisplayField>
    <errorMessage>Project name is not matching with Contract Project</errorMessage>
</ValidationRule>