force-app/main/default/objects/Expense__c/listViews/Project_Expenses.listView-meta.xml
<ListView>
    <fullName>Project_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Ammount__c</columns>
    <columns>Project__c</columns>
    <columns>Contracts__c</columns>
    <columns>Date_of_Expense__c</columns>
    <columns>Description__c</columns>
    <columns>Contacts__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>Project Expenses</label>
</ListView>