force-app/main/default/objects/Expense__c/listViews/Sachivalayam_Expenses.listView-meta.xml
<ListView>
    <fullName>Sachivalayam_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Ammount__c</columns>
    <columns>Project__c</columns>
    <columns>Contracts__c</columns>
    <columns>Date_of_Expense__c</columns>
    <columns>Description__c</columns>
    <columns>Contacts__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Sachivalayam</value>
    </filters>
    <label>Sachivalayam Expenses</label>
</ListView>